crates/graphcal-project/tests/snapshots/error_snapshots__error_inline_dag_call_missing_projection.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
inline DAG call requires `::<out>` projection
    Diagnostic severity: error
Begin snippet for missing_projection.gcl starting at line 9, column 1

snippet line 9: param src: Length = 1.0 m;
snippet line 10: node bad: Length = @scale(v: @src);
    label at line 10, column 35: expected `::<out>` projection here
diagnostic help: add `::<output_name>` after the call; an instantiated DAG without a projection is not a graph value
diagnostic code: graphcal::P014
