crates/graphcal-project/tests/snapshots/error_snapshots__error_key_cross_axis_assignment.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
type annotation mismatch: declared Key<Maneuver>, inferred Key<Phase>
    Diagnostic severity: error
Begin snippet for key_cross_axis_assignment.gcl starting at line 5, column 1

snippet line 5: 
snippet line 6: node k: Key<Maneuver> = Phase#Launch;
    label at line 6, columns 9 to 21: declared as Key<Maneuver>
diagnostic help: the declared type must match the inferred dimension of the expression
diagnostic code: graphcal::D002
