crates/graphcal-project/tests/snapshots/error_snapshots__error_key_equality_cross_axis.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected Key<Maneuver>, found Key<Phase>
    Diagnostic severity: error
Begin snippet for key_equality_cross_axis.gcl starting at line 4, column 1

snippet line 4: 
snippet line 5: node same: Bool = Maneuver#Departure == Phase#Launch;
    label at line 5, columns 41 to 52: has type Key<Phase>
diagnostic help: equality operands must have the same type
diagnostic code: graphcal::D001
